...
const Home = () => {
  const {user} = useContext(AuthContext);

  return (
    <SafeAreaView>
      <View>
        <Text testID='welcome-user'>Welcome {user?.email}</Text>
      </View>
    </SafeAreaView>
  )
}

// export default Home
...
const HomeNavigation: React.FC<{ navigation: HomeNavScreenNavigationProp }> = ({ navigation }) => {
    
    /**
     * Function to return Menu button for the Home screen
     */
    const menuBtn = (
        <TouchableOpacity testID='menu-btn' onPress={() => navigation.toggleDrawer()}>
            <View style={{ paddingRight: 8, paddingTop: 2 }}>
                <Icon size={24} name={'menu'} />
            </View>
        </TouchableOpacity>
    )

...
